Fixes text overflow bug.

--- a/src/app/components/Donate/Donate.css
+++ b/src/app/components/Donate/Donate.css
@@ -24,6 +24,12 @@
   }
 }
 
+@media (max-width: 500px) {
+  .donate-text {
+    font-size: medium;
+  }
+}
+
 .overlay {
   display: flex;
   align-items: center;
